--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,15 @@
     "default_popup": "hello.html",
     "default_icon": "hello_extensions.png"
   },
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
+  },
+  "content_scripts": [{
+    "matches": ["http://*.weibo.com/*"],
+    "css": [],
+    "js": ["content-script.js"]
+  }],
+  "permissions": [],
   "manifest_version": 2
 }
